@@ -1,2 +1,2 @@
 The data files in this directory were obtained from the IANA Time Zone Database,
-http://www.iana.org/time-zones, version 2014a.
+http://www.iana.org/time-zones, version 2014b.
