@@ -13,6 +13,7 @@ module TZInfo
           tz.offset :o5, 3600, 0, :CET
           tz.offset :o6, 10800, 3600, :MSD
           tz.offset :o7, 7200, 3600, :EEST
+          tz.offset :o8, 14400, 0, :MSK
           
           tz.transition 1879, 12, :o1, 8667775459, 3600
           tz.transition 1924, 5, :o2, 436303333, 180
@@ -87,80 +88,7 @@ module TZInfo
           tz.transition 2012, 10, :o2, 1351386000
           tz.transition 2013, 3, :o7, 1364691600
           tz.transition 2013, 10, :o2, 1382835600
-          tz.transition 2014, 3, :o7, 1396141200
-          tz.transition 2014, 10, :o2, 1414285200
-          tz.transition 2015, 3, :o7, 1427590800
-          tz.transition 2015, 10, :o2, 1445734800
-          tz.transition 2016, 3, :o7, 1459040400
-          tz.transition 2016, 10, :o2, 1477789200
-          tz.transition 2017, 3, :o7, 1490490000
-          tz.transition 2017, 10, :o2, 1509238800
-          tz.transition 2018, 3, :o7, 1521939600
-          tz.transition 2018, 10, :o2, 1540688400
-          tz.transition 2019, 3, :o7, 1553994000
-          tz.transition 2019, 10, :o2, 1572138000
-          tz.transition 2020, 3, :o7, 1585443600
-          tz.transition 2020, 10, :o2, 1603587600
-          tz.transition 2021, 3, :o7, 1616893200
-          tz.transition 2021, 10, :o2, 1635642000
-          tz.transition 2022, 3, :o7, 1648342800
-          tz.transition 2022, 10, :o2, 1667091600
-          tz.transition 2023, 3, :o7, 1679792400
-          tz.transition 2023, 10, :o2, 1698541200
-          tz.transition 2024, 3, :o7, 1711846800
-          tz.transition 2024, 10, :o2, 1729990800
-          tz.transition 2025, 3, :o7, 1743296400
-          tz.transition 2025, 10, :o2, 1761440400
-          tz.transition 2026, 3, :o7, 1774746000
-          tz.transition 2026, 10, :o2, 1792890000
-          tz.transition 2027, 3, :o7, 1806195600
-          tz.transition 2027, 10, :o2, 1824944400
-          tz.transition 2028, 3, :o7, 1837645200
-          tz.transition 2028, 10, :o2, 1856394000
-          tz.transition 2029, 3, :o7, 1869094800
-          tz.transition 2029, 10, :o2, 1887843600
-          tz.transition 2030, 3, :o7, 1901149200
-          tz.transition 2030, 10, :o2, 1919293200
-          tz.transition 2031, 3, :o7, 1932598800
-          tz.transition 2031, 10, :o2, 1950742800
-          tz.transition 2032, 3, :o7, 1964048400
-          tz.transition 2032, 10, :o2, 1982797200
-          tz.transition 2033, 3, :o7, 1995498000
-          tz.transition 2033, 10, :o2, 2014246800
-          tz.transition 2034, 3, :o7, 2026947600
-          tz.transition 2034, 10, :o2, 2045696400
-          tz.transition 2035, 3, :o7, 2058397200
-          tz.transition 2035, 10, :o2, 2077146000
-          tz.transition 2036, 3, :o7, 2090451600
-          tz.transition 2036, 10, :o2, 2108595600
-          tz.transition 2037, 3, :o7, 2121901200
-          tz.transition 2037, 10, :o2, 2140045200
-          tz.transition 2038, 3, :o7, 59172253, 24
-          tz.transition 2038, 10, :o2, 59177461, 24
-          tz.transition 2039, 3, :o7, 59180989, 24
-          tz.transition 2039, 10, :o2, 59186197, 24
-          tz.transition 2040, 3, :o7, 59189725, 24
-          tz.transition 2040, 10, :o2, 59194933, 24
-          tz.transition 2041, 3, :o7, 59198629, 24
-          tz.transition 2041, 10, :o2, 59203669, 24
-          tz.transition 2042, 3, :o7, 59207365, 24
-          tz.transition 2042, 10, :o2, 59212405, 24
-          tz.transition 2043, 3, :o7, 59216101, 24
-          tz.transition 2043, 10, :o2, 59221141, 24
-          tz.transition 2044, 3, :o7, 59224837, 24
-          tz.transition 2044, 10, :o2, 59230045, 24
-          tz.transition 2045, 3, :o7, 59233573, 24
-          tz.transition 2045, 10, :o2, 59238781, 24
-          tz.transition 2046, 3, :o7, 59242309, 24
-          tz.transition 2046, 10, :o2, 59247517, 24
-          tz.transition 2047, 3, :o7, 59251213, 24
-          tz.transition 2047, 10, :o2, 59256253, 24
-          tz.transition 2048, 3, :o7, 59259949, 24
-          tz.transition 2048, 10, :o2, 59264989, 24
-          tz.transition 2049, 3, :o7, 59268685, 24
-          tz.transition 2049, 10, :o2, 59273893, 24
-          tz.transition 2050, 3, :o7, 59277421, 24
-          tz.transition 2050, 10, :o2, 59282629, 24
+          tz.transition 2014, 3, :o8, 1396137600
         end
       end
     end
